fixed z-index

--- a/src/components/app-select/index.scss
+++ b/src/components/app-select/index.scss
@@ -30,6 +30,7 @@
 
 	&__list {
 		position: absolute;
+		z-index: 1;
 		top: 110%;
 		left: 0;
 		right: 0;
